here goes nothing

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:232611@localhost:5432/logpose_db
+DATABASE_URL=postgresql://career_logpose_db_user:c9W5IIqLF6y4QAp4z1c5Idv5B70MfwCZ@dpg-d1e5djh5pdvs73f7lu3g-a.singapore-postgres.render.com/career_logpose_db
